--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Centeias Map</title>
+   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
@@ -20,7 +21,7 @@
             <script type="text/javascript" src="main.js"> </script>
         </div>
         <div id="texto">
-            <h1>Oi abigos</h1>
+            
         </div>
     </div>
 </body>
