--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    
+    <link href="bootstrap-tour-standalone.min.css" rel="stylesheet">
+
     <script src="lib/leaflet/leaflet.js"></script>
     <script src="data/estados_br.geojson"></script>
     <script src="data/mundo.geojson"></script>
+  
+  
 </head>
 <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -23,18 +29,24 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="file:///home/diego/Documentos/Si/Si-Geo/index.html"> Inicio <span class="sr-only">(current)</span></a>
+                      <div id="inicio">
+                          <a class="nav-link" href="file:///home/diego/Documentos/Si/Si-Geo/index.html"> Inicio <span class="sr-only">(current)</span></a>
+                      </div>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="https://fs.unb.br/saladesituacao/">Sobre</a>
+                      <div id="sobre">
+                          <a class="nav-link" href="https://fs.unb.br/saladesituacao/">Sobre</a>
+                      </div>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Login</a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Produtos da sala de Situação
-                      </a>
+                      <div id="sala">
+                          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Produtos da sala de Situação
+                          </a>      
+                      </div>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/boletim-epidemiologico">Boletim Epidemiológico</a>
                         <a class="dropdown-item" href="https://fs.unb.br/saladesituacao/boletim-entomologico">Boletim Entomológico</a>
@@ -55,12 +67,15 @@
               </nav>
 
     <div id="map">
-        <script type="text/javascript" src="main.js"> </script>
+        <script src="main.js"></script>
         <div id="texto"></div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  
+  <script src="jquery.min.js"></script>
+  <script src="bootstrap-tour-standalone.min.js"></script>
+  <script src="tour.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-
 </body>
 </html>
